Fix survey styling on mobile

--- a/dating/frontend/style/style.scss
+++ b/dating/frontend/style/style.scss
@@ -103,9 +103,7 @@ button, .btn {
     }
 
     .value {
-        position: absolute;
         width: 100%;
-        height: 2rem;
         font-size: 1.4rem;
         line-height: 2rem;
     }
